--- a/packages/admin-dashboard/src/locales/en/customers.json
+++ b/packages/admin-dashboard/src/locales/en/customers.json
@@ -34,5 +34,59 @@
         "header": "History",
         "toastError": "There was an error",
         "toastSuccess": "Action completed successfully"
+    },
+    "selectAddress": {
+        "nameRequired": "Full Name is required",
+        "streetRequired": "Street Line 1 is required",
+        "cityRequired": "City name is required",
+        "postalCodeRequired": "Postal Code is required",
+        "countryRequired": "Country is required",
+        "phoneNumberRequired": "Phone Number is required",
+        "shippingHeader": "Shipping address",
+        "billingHeader": "Billing address",
+        "shippingDescription": "Here you can set shipping address",
+        "billingDescription": "Here you can set billing address",
+        "changeShippingAddress": "Change shipping address",
+        "selectShippingAddress": "Select shipping address",
+        "createShippingAddress": "Create shipping address",
+        "changeBillingAddress": "Change billing address",
+        "selectBillingAddress": "Select billing address",
+        "createBillingAddress": "Create billing address",
+        "selectAddress": "Select Address",
+        "createAddress": "Create Address",
+        "editAddress": "Edit Address",
+        "addressSuccessCreateToast": "Address selected successfully",
+        "addressSuccessSelectToast": "Address created successfully",
+        "addressFailedCreateToast": "Address selection failed",
+        "addressFailedSelectToast": "Address creation failed",
+        "newAddress": "New address: {{address}} added to user  account",
+        "addressAddFailed": "Failed to add new address to user account",
+        "phoneError": "Invalid phone number format",
+        "close": "Close",
+        "setAsDefaultShipping": "Set as default shipping address",
+        "setAsDefaultBilling": "Set as default billing address",
+        "countrySelectLabel": " Country:",
+        "phoneNumberShort": "tel.{{value}}",
+        "isDefaultBilling": "Customer default shipping address",
+        "isDefaultShipping": "Customer default billing address",
+        "createForCustomer": "Create for customer",
+        "inputNameLabel": "Full Name",
+        "inputNamePlaceholder": "Full Name",
+        "inputCompanyLabel": "Company Name",
+        "inputCompanyPlaceholder": "Company Name",
+        "inputPhoneLabel": "Phone Number",
+        "inputPhonePlaceholder": "Phone Number",
+        "inputPostalLabel": "Postal Code",
+        "inputPostalPlaceholder": "Postal Code",
+        "inputProvinceLabel": "Province",
+        "inputProvincePlaceholder": "Province",
+        "inputCityLabel": "City",
+        "inputCityPlaceholder": "City",
+        "inputStreetLabel": "Street Line 1",
+        "inputStreetPlaceholder": "Street Line 1",
+        "inputStreet2Label": "Street Line 2",
+        "inputStreet2Placeholder": "Street Line 2",
+        "inputTaxLabel": "Company Tax ID",
+        "inputTaxPlaceholder": "Company Tax ID"
     }
 }
