--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -73,6 +73,7 @@
     "dashboard": "deska rozdzielcza",
     "products": "produkty",
     "customers": "klienci",
+    "customerGroups": "grupy klientów",
     "collections": "kolekcje",
     "orders": "zamówienia",
     "facets": "aspekty",
