Implement handling addresses in customer

--- a/packages/admin-dashboard/src/locales/en/customers.json
+++ b/packages/admin-dashboard/src/locales/en/customers.json
@@ -16,11 +16,13 @@
         "header": "Customer groups",
         "placeholder": "Add groups",
         "toastAdded": "User has been added to the group",
-        "toastRemoved": "User has been removed from the group"
+        "toastRemoved": "User has been removed from the group",
+        "createCustomerFirst": "After customer creation, you will be able to add him or her to different customer groups here"
     },
     "addresses": {
         "header": "Addresses",
         "empty": "It looks like there are no addresses yet.",
+        "createCustomerFirst": "After customer creation, you will be able to add his or her first address here.",
         "addBtn": "Add address",
         "phoneNumberShort": "tel.{{value}}",
         "edit": "Edit",
@@ -55,10 +57,17 @@
         "selectAddress": "Select Address",
         "createAddress": "Create Address",
         "editAddress": "Edit Address",
-        "addressSuccessCreateToast": "Address selected successfully",
-        "addressSuccessSelectToast": "Address created successfully",
+        "deleteAddress": "Delete Address",
+        "more": "More",
+        "addressSuccessUpdateToast": "Address updated successfully",
+        "addressSuccessCreateToast": "Address created successfully",
+        "addressSuccessDeleteToast": "Address deleted successfully",
+        "addressSuccessSetAsDefaultBillingToast": "Address set as default billing address successfully",
+        "addressSuccessSetAsDefaultShippingToast": "Address set as default shipping address successfully",
         "addressFailedCreateToast": "Address selection failed",
-        "addressFailedSelectToast": "Address creation failed",
+        "addressFailedUpdateToast": "Address creation failed",
+        "addressFailedDeleteToast": "Address deletion failed",
+        "addressFailedSetAsDefaultToast": "Setting address as default failed",
         "newAddress": "New address: {{address}} added to user  account",
         "addressAddFailed": "Failed to add new address to user account",
         "phoneError": "Invalid phone number format",
@@ -67,6 +76,8 @@
         "setAsDefaultBilling": "Set as default billing address",
         "countrySelectLabel": " Country:",
         "phoneNumberShort": "tel.{{value}}",
+        "defaultBilling": "Default billing address",
+        "defaultShipping": "Default shipping address",
         "isDefaultBilling": "Customer default shipping address",
         "isDefaultShipping": "Customer default billing address",
         "createForCustomer": "Create for customer",
